--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>HellRegistry</title>
     <!-- Enlace al archivo CSS de Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Styles.css"></link>
 </head>
 <body id="body">
@@ -33,28 +34,75 @@
             </ul>
         </div>
     </nav>
+    <!-- Carousel Start -->
+    <div class="container-fluid p-0 mb-5">
+        <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
+                        <h1 class="display-1 text-white m-0">Democracy</h1>
+                        <h2 class="text-white m-0">* SINCE 2400 B.C *</h2>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
+                        <h1 class="display-1 text-white m-0">Liberty</h1>
+                        <h2 class="text-white m-0">* SINCE 2400 B.C *</h2>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#blog-carousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#blog-carousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </div>
+    <!-- Carousel End -->
 
-    <div class="jumbotron jumbotron-bg">
-      <h1>unete a los HellDivers</h1>
-  </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h2>Quienes somos?</h2>
-                <p>Somos los encargados de repartir la libertad integra y sin limites a todo el universo, para llevar la democracia y la libertad hasta los confines del universo</div>
-                <div class="col-md-4">
+    <!-- About Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="section-title">
+                <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">About Us</h4>
+                <h1 class="display-4">Serving Since 1950</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 py-0 py-lg-5">
+                    <h1 class="mb-3">Our Story</h1>
+                    <h5 class="mb-3">born in the colonies of the SuperEarth and willing to protect our way of life</h5>
+                    <p>whe will give managed democracy to the aliens to protect our collonies and get the enemies of fredom away from our cherished SuperEarth</p>
+                    <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                </div>
+                <div class="col-lg-4 py-5 py-lg-0" style="min-height: 500px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+                    </div>
+                </div>
+                <div class="col-lg-4 py-0 py-lg-5">
+                    <h1 class="mb-3">Our Vision</h1>
+                    <p>our vision is proctect our world while we spread managed democracy around the univers</p>
+                    <a href="" class="btn btn-primary font-weight-bold py-2 px-4 mt-2">Learn More</a>
+                </div>
             </div>
         </div>
     </div>
-
-    
+    <!-- About End -->
 
     <!-- Pie de página -->
     <footer class="footer bg-dark text-light text-center py-4">
         <div class="container">
-            <span class="text-muted">© 2024 Mi Sitio</span>
+            <span class="text-muted">© 2400 ComandofSuperEarth</span>
+            <span class="text-muted">SuperTel: 555-5555-5555</span>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
